Change job title to Data Analytics Specialist

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="content" data-aos="fade-up">
                 <p class="above-title mb-16">My name is</p>
                 <h1 class="full-name">Mayokun <span class="primary">Akeremale.</span></h1>
-                        <p class="primary">Information Management Specialist</p>
+                        <p class="primary">Data Analytics Specialist</p>
                 <p class="about">My work sits at the intersection of research, knowledge management and data storytelling-transformimg complex  information into insights that informs strategy and action.</p>
                 <a href="assets/Mayokun_Akeremale_Brief_2025.pdf" target="_blank" class="btn btn-outline-light download-resume-mobile">Download Resume</a>
                 <ul class="social-icons">
